--- a/public/404.html
+++ b/public/404.html
@@ -2,8 +2,45 @@
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="/logo_icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#2767e2" />
     <title>BetterBet Dashboard - Página não encontrada</title>
+    <style>
+      body {
+        font-family: 'Roboto', sans-serif;
+        background-color: #f5f7fa;
+        color: #333;
+        text-align: center;
+        padding: 40px 20px;
+        line-height: 1.6;
+      }
+      .container {
+        max-width: 600px;
+        margin: 0 auto;
+        background-color: white;
+        border-radius: 8px;
+        padding: 30px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      }
+      h2 {
+        color: #2767e2;
+        margin-bottom: 20px;
+      }
+      a {
+        color: #2767e2;
+        text-decoration: none;
+        font-weight: bold;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
+      .logo {
+        width: 100px;
+        height: auto;
+        margin-bottom: 20px;
+      }
+    </style>
     <script type="text/javascript">
       // Redireciona para a página principal
       var pathSegmentsToKeep = 1;
@@ -24,7 +61,10 @@
     </script>
   </head>
   <body>
-    <h2>Redirecionando...</h2>
-    <p>Se você não for redirecionado automaticamente, clique <a href="https://guimma.github.io/betterbet-plataform/">aqui</a> para voltar à página principal.</p>
+    <div class="container">
+      <img src="/logo_icon.svg" alt="BetterBet Logo" class="logo" />
+      <h2>Redirecionando...</h2>
+      <p>Se você não for redirecionado automaticamente, clique <a href="https://guimma.github.io/betterbet-plataform/">aqui</a> para voltar à página principal.</p>
+    </div>
   </body>
 </html> 
